--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -26,3 +26,11 @@
 .page-main__advantage {
   margin-bottom: 40px;
 }
+
+.page-main__catalog {
+  margin-bottom: 25px;
+}
+
+.page-main__additional {
+  margin-bottom: 35px;
+}
