Основные стили для формы

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,7 +1,9 @@
 .page-footer {
+  padding-bottom: 20px;
   margin-top: 30px;
-  margin-bottom: 20px;
   width: 320px;
+
+  background-color: @light-gray;
 }
 
 .page-footer__container {
@@ -12,6 +14,11 @@
 
 .page-footer__address {
   margin-bottom: 40px;
+  background: #ffffff;
+}
+
+.address__map {
+  background-color: @light-gray;
 }
 
 .page-footer__logo {
