--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -1,10 +1,16 @@
 .address__invite {
+  margin: 0;
+  padding: 0;
+
   width: 140px;
   .oswald-font-m(16px, 20px);
   text-transform: uppercase;
 }
 
 .address__text {
+  margin: 0;
+  padding: 0;
+
   width: 140px;
   .arial-font(14px, 20px);
 }
