Исправление в подключении шрифтов

--- a/source/less/mixin.less
+++ b/source/less/mixin.less
@@ -7,7 +7,7 @@
 }
 
 .oswald-font-l(@size, @height) {
-  font-family: "oswald-medium", "Arial", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: @size;
   line-height: @height;
   font-weight: 500;
@@ -15,7 +15,7 @@
 }
 
 .oswald-font-m(@size, @height) {
-  font-family: "oswald-regular", "Arial", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: @size;
   line-height: @height;
   font-weight: 400;
