--- a/source/less/blocks/title.less
+++ b/source/less/blocks/title.less
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
 
-  font-family: "oswald-regular", "Arial", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-weight: 400;
 }
 
