Убраны цветовые функции

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -22,12 +22,12 @@
 }
 
 .button--green:active {
-  color: fade(#ffffff, 30%);
+  color: rgba(255, 255, 255, 0.3);
   background-color: @dark-green;
 }
 
 .button--gray {
-  color: @dark-gray;
+  color: rgba(68, 68, 68, 1);
   background-color: @light-gray;
 }
 
@@ -37,5 +37,5 @@
 }
 
 .button--gray:active {
-  color: fade(@dark-gray, 30%);
+  color: rgba(68, 68, 68, 0.3);
 }
