Лого преобразованно в отдельный бэм блок

--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -18,9 +18,8 @@
 }
 
 .page-footer__logo {
-  display: block;
+  margin: 0 auto;
   margin-bottom: 30px;
-  text-align: center;
 }
 
 .page-footer__social {
