К боди подключен главный шрифт

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "variables.less";
 @import "mixin.less";
 @import "fonts-style.less";
+@import "blocks/content.less";
 @import "blocks/logo.less";
 @import "blocks/title.less";
 @import "blocks/page-header.less";
