Шапка переделана под нужды адаптивности

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -37,7 +37,7 @@
 
   .oswald-font-m(16px, 18px);
   text-transform: uppercase;
-  border: 1px solid @border-form;
+  border: 1px solid @line-gray;
   box-sizing: border-box;
 }
 
@@ -91,7 +91,7 @@
   height: 150px;
   padding: 15px;
   padding-right: 0;
-  border: 1px solid @border-form;
+  border: 1px solid @line-gray;
 
   .oswald-font-m(16px, 18px);
   text-transform: uppercase;
