--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,7 +1,13 @@
 .page-header {
   position: relative;
 
-  width: 280px;
-  padding: 10px 20px 15px 20px;
+  margin: 0 auto;
   background-color: #ffffff;
+}
+
+.page-header__logo {
+  margin-top: 10px;
+  padding-left: 20px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid @line-gray;
 }
