--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -6,8 +6,9 @@
 }
 
 .site-list__item {
-  margin: 20px 0;
+  padding: 25px 0 20px;
   text-align: center;
+  border-bottom: 1px solid @line-gray;
 }
 
 .site-list__item:last-child {
