--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -2,4 +2,7 @@
 @medium-gray: #ebebeb;
 @light-green: #68b738;
 @dark-green: #5eaa2f;
-@border-form: fade(#cdcdcd, 50%);
+@line-gray: rgba(205, 205, 205, 0.5);
+
+@table-widht: 768px;
+@desktop-widht: 1440px;
