--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,7 +1,7 @@
 .button {
   display: block;
-  width: 100%;
-  padding: 13px 0 10px 0;
+  width: auto;
+  padding: 15px 0 12px 0;
 
   .oswald-font-m(14px, 18px);
   text-transform: uppercase;
@@ -38,4 +38,12 @@
 
 .button--gray:active {
   color: rgba(68, 68, 68, 0.3);
+}
+
+@media (min-width: @table-width) {
+  .button {
+    width: 250px;
+    .oswald-font-m(20px, 20px);
+    color: #ffffff;
+  }
 }
