--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,14 +1,11 @@
 .page-footer {
   padding-bottom: 20px;
   margin-top: 30px;
-  width: 320px;
 
   background-color: @light-gray;
 }
 
 .page-footer__container {
-  width: 280px;
-  margin: 0 auto;
   padding-bottom: 1px;
 }
 
@@ -24,4 +21,30 @@
 
 .page-footer__social {
   margin-bottom: 20px;
+}
+
+.page-footer__copyright {
+  margin: 0 20px;
+}
+
+@media (min-width: @table-width) {
+  .page-footer__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    margin: 0 30px;
+  }
+
+  .page-footer__logo {
+    margin: 0;
+  }
+
+  .page-footer__social {
+    margin: 0;
+  }
+
+  .page-footer__copyright {
+    margin: 0;
+  }
 }
