--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -3,12 +3,22 @@
   position: absolute;
   top: 0;
   left: 0;
-
-  width: 320px;
+  width: 100%;
   height: 305px;
-  background: @light-green url("../../img/index-background-mobile@1x.jpg") no-repeat 0 0;
+  background: @bg-product url("../../img/index-background-mobile@1x.jpg") no-repeat 50% 0;
 
   z-index: -1;
+}
+
+.product-banner__title {
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+.product-banner__title--mobile {
+  text-align: center;
+  line-height: 36px;
+  color: #ffffff;
 }
 
 .product-banner__tagline {
@@ -26,7 +36,37 @@
   margin-bottom: 5px;
 }
 
-.product-banner__button {
-  text-decoration: none;
-  color: #ffffff;
+
+@media (min-width: @table-width) {
+  .product-banner {
+    position: relative;
+  }
+
+  .product-banner::before {
+    display: none;
+  }
+
+  .product-banner__title {
+    margin-top: 35px;
+    margin-bottom: 25px;
+    margin-left: 90px;
+    width: 430px;
+    text-align: left;
+    line-height: 60px;
+    color: #000000;
+  }
+
+  .product-banner__tagline {
+    margin-bottom: 15px;
+    margin-left: 90px;
+    .oswald-font-m(20px, 20px);
+    text-align: left;
+    color: #000000;
+  }
+
+  .product-banner__button {
+    position: absolute;
+    top: 210px;
+    left: 90px;
+  }
 }
