--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -42,10 +42,31 @@
 .site-list__link--active::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -7px;
   left: 0;
   width: 100%;
   height: 2px;
 
   background-color: @light-green;
+}
+
+
+@media (min-width: @table-width) {
+  .site-list {
+    display: flex;
+  }
+
+  .site-list__item {
+    padding: 10px 0;
+    margin-right: 35px;
+    border: none;
+  }
+
+  .site-list__item:last-child {
+    margin-right: 0;
+  }
+
+  .site-list__link {
+    .oswald-font-m(18px, 25px);
+  }
 }
