--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,8 +1,10 @@
 @light-gray: #f2f2f2;
 @medium-gray: #ebebeb;
+@dark-gray: #666666;
 @light-green: #68b738;
 @dark-green: #5eaa2f;
+@bg-product: #65a93c;
 @line-gray: rgba(205, 205, 205, 0.5);
 
-@table-widht: 768px;
-@desktop-widht: 1440px;
+@table-width: 768px;
+@desktop-width: 1440px;
