--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -17,10 +17,18 @@
 }
 
 .page-main__additional {
+  width: 280px;
+  margin: 0 auto;
   margin-bottom: 35px;
 }
 
 .page-main__form {
+  margin-bottom: 30px;
+}
+
+.page-main__title {
+  width: 280px;
+  margin: 0 auto;
   margin-bottom: 30px;
 }
 
@@ -35,5 +43,11 @@
 
   .page-main__product-banner {
     margin-bottom: 0;
+  }
+
+  .page-main__title {
+    width: 708px;
+    margin: 0 auto;
+    margin-bottom: 10px;
   }
 }
