--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,22 +1,94 @@
 .product__title {
-  display: block;
-  margin-bottom: 15px;
+  display: inline-block;
+  width: 80px;
+  margin-bottom: 12px;
+  vertical-align: middle;
 }
 
 .product__link {
+  display: block;
   .oswald-font-m(16px, 20px);
   text-decoration: none;
   text-transform: uppercase;
 }
 
+.product__composition {
+  border-collapse: collapse;
+}
+
 .product__item {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
   .arial-font(12px, 16px);
 }
 
 .product__value {
+  margin: 0;
+  padding: 0;
   text-align: right;
 }
 
+.product__index {
+  margin: 0;
+  padding: 0;
+}
+
 .product__wrapper {
-  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  width: 280px;
+  margin: 0 auto;
+}
+
+.product__button {
+  width: 280px;
+  margin: 0 auto;
+}
+
+@media (min-width: @table-width) {
+  .product {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  .product__button {
+    width: 250px;
+  }
+
+  .product__wrapper {
+    flex-direction: column;
+    width: 250px;
+  }
+
+  .product__title {
+    width: 130px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+
+  .product__link {
+    .oswald-font-m(20px, 20px);
+  }
+
+  .product__image {
+    position: absolute;
+    bottom: 320px;
+    left: 0;
+  }
+
+  .product__composition {
+    width: 100%;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  .product__item {
+    padding: 5px 0;
+    .arial-font(16px, 16px);
+    border-bottom: 1px solid @line-gray;
+  }
 }
