--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,5 +1,5 @@
 .page-main {
-  position: relative;
+  // position: relative;
   padding-top: 1px;
 }
 
@@ -49,5 +49,11 @@
     width: 708px;
     margin: 0 auto;
     margin-bottom: 10px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-main__container {
+    width: 1220px;
   }
 }
