--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -70,3 +70,15 @@
     .oswald-font-m(18px, 25px);
   }
 }
+
+
+@media (min-width: @desktop-width) {
+  .site-list__link {
+    font-size: 20px;
+    color: #ffffff;
+  }
+
+  .site-list__link--active::after {
+    background-color: #ffffff;
+  }
+}
