--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -126,3 +126,45 @@
     .oswald-font-m(20px, 20px);
   }
 }
+
+@media (min-width: @desktop-width) {
+  .programs__list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .programs__description {
+    margin-bottom: 35px;
+    width: 465px;
+  }
+
+  .programs__title {
+    margin-top: 30px;
+    margin-bottom: 70px;
+    padding-left: 165px;
+  }
+
+  .programs__item::before {
+    top: 50px;
+    left: 50px;
+
+    width: 100px;
+    height: 100px;
+  }
+
+  .programs__item--cat-slim::after {
+    top: 45px;
+    left: 65px;
+
+    width: 70px;
+    height: 100px;
+  }
+
+  .programs__item--cat-pro::after {
+    top: 75px;
+    left: 35px;
+
+    width: 135px;
+    height: 55px;
+  }
+}
