Добавлена адаптивность на ПК для части каталога

--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -92,3 +92,13 @@
     border-bottom: 1px solid @line-gray;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .product__wrapper {
+    width: 170px;
+  }
+
+  .product__button {
+    width: 170px;
+  }
+}
