--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -102,3 +102,13 @@
     height: 60px;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .catalog__list {
+    width: 1220px;
+  }
+
+  .catalog__item {
+    width: 245px;
+  }
+}
