--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -75,10 +75,13 @@
 @media (min-width: @desktop-width) {
   .site-list__link {
     font-size: 20px;
+  }
+
+  .site-list__link--light {
     color: #ffffff;
   }
 
-  .site-list__link--active::after {
+  .site-list__link--light::after {
     background-color: #ffffff;
   }
 }
