--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -1,7 +1,7 @@
 .product-banner::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: 250px;
   left: 0;
   width: 100%;
   height: 305px;
