Поправил пути для графики

--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -50,19 +50,19 @@
 }
 
 .advantage__description--leaf::after {
-  background: url("../../img/advantage-leaf@1x.png") no-repeat 0 0;
+  background: url("../img/advantage-leaf@1x.png") no-repeat 0 0;
 }
 
 .advantage__description--powder::after {
-  background: url("../../img/advantage-powder@1x.png") no-repeat 0 0;
+  background: url("../img/advantage-powder@1x.png") no-repeat 0 0;
 }
 
 .advantage__description--dining::after {
-  background: url("../../img/advantage-dining@1x.png") no-repeat 0 0;
+  background: url("../img/advantage-dining@1x.png") no-repeat 0 0;
 }
 
 .advantage__description--clock::after {
-  background: url("../../img/advantage-clock@1x.png") no-repeat 0 0;
+  background: url("../img/advantage-clock@1x.png") no-repeat 0 0;
 }
 
 @media (min-width: @table-width) {
