--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -14,5 +14,5 @@
   height: 35px;
   vertical-align: middle;
 
-  background: url("../../img/htmlacademy.svg") no-repeat 50% 50%;
+  background: url("../img/htmlacademy.svg") no-repeat 50% 50%;
 }
