--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -10,13 +10,13 @@
 .main-nav__toggle--open {
   width: 24px;
   height: 24px;
-  background: url("../../img/icon-mobile-menu.svg") no-repeat 0 0;
+  background: url("../img/icon-mobile-menu.svg") no-repeat 0 0;
 }
 
 .main-nav__toggle--close {
   width: 18px;
   height: 18px;
-  background: url("../../img/icon-close.svg") no-repeat 0 0;
+  background: url("../img/icon-close.svg") no-repeat 0 0;
 }
 
 @media (min-width: @table-width) {
