--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -45,7 +45,7 @@
 
   width: 35px;
   height: 49px;
-  background: url("../../img/icon-cat-slim.svg") no-repeat 0 0;
+  background: url("../img/icon-cat-slim.svg") no-repeat 0 0;
 }
 
 .programs__item--cat-pro::after {
@@ -54,7 +54,7 @@
 
   width: 67px;
   height: 28px;
-  background: url("../../img/icon-cat-pro.svg") no-repeat 0 0;
+  background: url("../img/icon-cat-pro.svg") no-repeat 0 0;
 }
 
 .programs__description {
