--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -33,15 +33,15 @@
 }
 
 .social__link--vkontakte::before {
-  background: url("../../img/icon-vk.svg") no-repeat 50% 50%;
+  background: url("../img/icon-vk.svg") no-repeat 50% 50%;
 }
 
 .social__link--instagram::before {
-  background: url("../../img/icon-insta.svg") no-repeat 50% 50%;
+  background: url("../img/icon-insta.svg") no-repeat 50% 50%;
 }
 
 .social__link--facebook::before {
-  background: @light-gray url("../../img/icon-fb.svg") no-repeat 50% 50%;
+  background: @light-gray url("../img/icon-fb.svg") no-repeat 50% 50%;
 }
 
 @media (min-width: @table-width) {
