--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -61,7 +61,7 @@
   align-items: flex-end;
   width: 280px;
   height: 290px;
-  background: url("../../img/gift-photo-mobile@1x.jpg") no-repeat 0 0;
+  background: url("../img/gift-photo-mobile@1x.jpg") no-repeat 0 0;
 }
 
 .additional__gift-description {
@@ -87,7 +87,7 @@
   width: 56px;
   height: 60px;
 
-  background: url("../../img/icon-gift.svg") no-repeat 0 0;
+  background: url("../img/icon-gift.svg") no-repeat 0 0;
 }
 
 .additional-wrapper {
