--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -38,7 +38,7 @@
   width: 30px;
   height: 30px;
 
-  background: url("../../img/icon-plus-mobile.svg") no-repeat 0 0;
+  background: url("../img/icon-plus-mobile.svg") no-repeat 0 0;
   opacity: 0.2;
 }
 
