--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -5,7 +5,7 @@
   left: 0;
   width: 100%;
   height: 305px;
-  background: @bg-product url("../../img/index-background-mobile@1x.jpg") no-repeat 50% 0;
+  background: @bg-product url("../img/index-background-mobile@1x.jpg") no-repeat 50% 0;
 
   z-index: -1;
 }
@@ -86,7 +86,7 @@
     width: 720px;
     height: 692px;
 
-    background: @light-green url("../../img/index-background-desktop@1x.jpg") no-repeat 0 0;
+    background: @light-green url("../img/index-background-desktop@1x.jpg") no-repeat 0 0;
     z-index: -1;
   }
 
