Добавлены псевдоэлементы в разделе advantage

--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -109,19 +109,19 @@
     z-index: -1;
   }
 
-  .advantage__item--one::after {
+  .advantage__item--number:nth-child(1)::after {
     content: "1";
   }
 
-  .advantage__item--two::after {
+  .advantage__item--number:nth-child(2)::after {
     content: "2";
   }
 
-  .advantage__item--three::after {
+  .advantage__item--number:nth-child(3)::after {
     content: "3";
   }
 
-  .advantage__item--four::after {
+  .advantage__item--number:nth-child(4)::after {
     content: "4";
   }
 }
