Заинлайнил социальный иконки

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -2,17 +2,28 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   .arial-font(16px, 16px);
+  color: @dark-gray;
   text-decoration: none;
 }
 
-.copyright__link::after {
-  content: "";
-  display: inline-block;
-  align-self: center;
-  width: 30px;
-  height: 35px;
-  vertical-align: middle;
-
-  background: url("../img/htmlacademy.svg") no-repeat 50% 50%;
+.copyright__icon path {
+  fill: @dark-gray;
 }
+
+.copyright__link:hover > .copyright__icon path,
+.copyright__link:focus > .copyright__icon path {
+  fill: @light-green;
+}
+
+.copyright__link:active {
+  opacity: 0.3;
+}
+
+@media (min-width: @table-width) {
+  .copyright__icon {
+    margin-left: 25px;
+  }
+}
+
