Пересобрал шапку и раздел баннера

--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -11,12 +11,12 @@
   opacity: 0.6;
 }
 
-.logo--full {
-  width: 191px;
-  height: 38px;
-}
+// .logo--full {
+//   width: 191px;
+//   height: 38px;
+// }
 
-.logo--short {
-  width: 128px;
-  height: 24px;
-}
+// .logo--short {
+//   width: 128px;
+//   height: 24px;
+// }
