--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -42,7 +42,8 @@
   }
 
   .page-main__product-banner {
-    margin-bottom: 0;
+    margin: 0 auto;
+    margin-bottom: 530px;
   }
 
   .page-main__title {
@@ -59,5 +60,9 @@
 
   .page-main__title {
     width: 1220px;
+  }
+
+  .page-main__product-banner {
+    margin-bottom: 45vh;
   }
 }
