--- a/source/less/mixin.less
+++ b/source/less/mixin.less
@@ -3,7 +3,7 @@
   font-size: @size;
   line-height: @height;
   font-weight: 400;
-  color: #000000;
+  color: @text-color;
 }
 
 .oswald-font-l(@size, @height) {
@@ -11,7 +11,7 @@
   font-size: @size;
   line-height: @height;
   font-weight: 500;
-  color: #000000;
+  color: @text-color;
 }
 
 .oswald-font-m(@size, @height) {
@@ -19,5 +19,5 @@
   font-size: @size;
   line-height: @height;
   font-weight: 400;
-  color: #000000;
+  color: @text-color;
 }
