--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -4,6 +4,8 @@
 @light-green: #68b738;
 @dark-green: #5eaa2f;
 @bg-product: #65a93c;
+
+@text-color: #111111;
 @line-gray: rgba(205, 205, 205, 0.5);
 
 @table-width: 768px;
