--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -1,117 +1,121 @@
 .product-banner {
-  position: relative;
-}
-
-.product-banner::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 305px;
-  background: @bg-product url("../img/index-background-mobile@1x.jpg") no-repeat 50% 0;
-
-  z-index: -1;
+  padding-top: 1px;
 }
 
 .product-banner__title {
-  padding-top: 30px;
-  width: 280px;
   margin: 0 auto;
+  margin-top: 30px;
   margin-bottom: 15px;
-}
-
-.product-banner__title--mobile {
+  max-width: 400px;
   text-align: center;
   line-height: 36px;
+
   color: #ffffff;
 }
 
 .product-banner__tagline {
   margin: 0;
-  margin-bottom: 25px;
   padding: 0;
-  text-align: center;
+  margin-bottom: 25px;
 
   .oswald-font-m(14px, 14px);
   text-transform: uppercase;
+  text-align: center;
   color: #ffffff;
 }
 
 .product-banner__image {
   display: block;
   margin: 0 auto;
-  margin-bottom: 5px;
 }
 
 .product-banner__button {
-  display: block;
-  width: 280px;
   margin: 0 auto;
+  width: 280px;
 }
 
+.product-banner::before {
+  content: "";
+  margin-top: -2px;
+  position: absolute;
+  top: auto;
+  left: auto;
+
+  width: 100%;
+  height: 305px;
+  background: @bg-product url("../img/index-background-mobile@1x.jpg") no-repeat 50% 50%;
+  z-index: -1;
+}
 
 @media (min-width: @table-width) {
-  .product-banner::before {
-    display: none;
+  .product-banner {
+    width: 530px;
+  }
+
+  .product-banner__image {
+    position: absolute;
+    top: 320px;
+    left: 50px;
+    right: 50px;
+    z-index: -1;
   }
 
   .product-banner__title {
+    margin: 0;
     margin-top: 35px;
-    margin-bottom: 25px;
-    margin-left: 90px;
-    width: 430px;
-    text-align: left;
+    margin-bottom: 30px;
     line-height: 60px;
-    color: #000000;
+    text-align: left;
+    color: @text-color;
   }
 
   .product-banner__tagline {
-    margin-bottom: 15px;
-    margin-left: 90px;
-    .oswald-font-m(20px, 20px);
+    margin-bottom: 45px;
+    font-size: 20px;
+    line-height: 20px;
     text-align: left;
-    color: #000000;
+    color: @text-color;
   }
 
   .product-banner__button {
-    position: absolute;
-    top: 210px;
-    left: 90px;
+    margin: 0;
+  }
+
+  .product-banner::before {
+    display: none;
   }
 }
 
 @media (min-width: @desktop-width) {
   .product-banner {
-    position: static;
-    margin-bottom: 270px;
+    width: 1060px;
   }
 
-  .product-banner--bg-img::after {
-    content: "";
+  .product-banner__title {
+    width: 530px;
+    margin-bottom: 35px;
+  }
+
+  .product-banner__tagline {
+    width: 490px;
+    margin-bottom: 50px;
+  }
+
+  .product-banner__image {
+    top: 140px;
+    left: 290px;
+  }
+
+  .product-banner::before {
+    display: block;
     position: absolute;
     top: 0;
     right: 0;
 
-    width: 720px;
-    height: 692px;
+    width: 50vw;
+    height: 101vh;
 
-    background: @light-green url("../img/index-background-desktop@1x.jpg") no-repeat 0 0;
-    z-index: -1;
-  }
-
-  .product-banner__button {
-    position: static;
-    margin-left: 90px;
-  }
-
-  .product-banner__image {
-    position: absolute;
-    top: 110px;
-    right: 325px;
-  }
-
-  .product-banner__tagline {
-    margin-bottom: 50px;
+    background: @bg-product url("../img/index-background-desktop@1x.jpg") no-repeat 50% 50%;
+    background-size: cover;
   }
 }
