Исправления для декстопной версии

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -37,7 +37,8 @@
 @media (min-width: @desktop-width) {
   .page-header__wrapper {
     padding: 55px 110px;
-    max-width: 1440px;
+    margin: 0 auto;
+    max-width: 1220px;
   }
 
   .page-header {
