--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -114,6 +114,7 @@
 
     width: 50vw;
     height: 101vh;
+    max-height: 768px;
 
     background: @bg-product url("../img/index-background-desktop@1x.jpg") no-repeat 50% 50%;
     background-size: cover;
