--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -41,6 +41,10 @@
     width: 710px;
   }
 
+  .page-main__additional {
+    width: 708px;
+  }
+
   .page-main__product-banner {
     margin: 0 auto;
     margin-bottom: 530px;
