--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -64,6 +64,7 @@
     margin: 0;
     margin-top: 35px;
     margin-bottom: 30px;
+    max-width: 430px;
     line-height: 60px;
     text-align: left;
     color: @text-color;
@@ -113,7 +114,7 @@
     right: 0;
 
     width: 50vw;
-    height: 101vh;
+    height: 100vh;
     max-height: 768px;
 
     background: @bg-product url("../img/index-background-desktop@1x.jpg") no-repeat 50% 50%;
