--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -73,6 +73,31 @@
   text-decoration: none;
 }
 
+.programs__link::after {
+  content: "";
+  display: inline-block;
+  margin-left: 12px;
+  margin-top: -3px;
+  vertical-align: middle;
+
+
+  width: 25px;
+  height: 11px;
+
+  background: url("../img/icon-right-arrow-long.svg") no-repeat 0 50%;
+  transition: all 0.2s ease-out;
+}
+
+.programs__link:hover::after,
+.programs__link:focus::after {
+  width: 32px;
+  background: url("../img/icon-right-arrow-verylong.svg") no-repeat 0 50%;
+}
+
+.programs__link:active {
+  opacity: 0.3;
+}
+
 .programs--mb {
   margin-bottom: 30px;
 }
