--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -69,7 +69,7 @@
 
   .catalog__item:last-child {
     background-color: transparent;
-    border: 1px solid @line-gray;
+    outline: 1px solid @line-gray;
   }
 
   .catalog__button {
