--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -4,26 +4,45 @@
   background-color: @light-gray;
 }
 
+.example__container {
+  width: 280px;
+  margin: 0 auto;
+}
+
 .example__title {
   margin: 30px 0;
 }
 
-.example__description {
+.example__text {
   margin-bottom: 25px;
 
   .arial-font(14px, 18px);
 }
 
 .example__list {
+  display: flex;
+  justify-content: space-between;
+
   margin: 0;
+  margin-bottom: 35px;
   padding: 0;
 
   list-style: none;
 }
 
 .example__item {
-  min-width: 125px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 120px;
+  height: 55px;
   text-align: center;
+
+  border: 1px solid #cdcdcd;
+  border-radius: 5px;
 }
 
 .example__value {
@@ -31,11 +50,26 @@
 }
 
 .example__index {
+  position: absolute;
+  bottom: -15px;
+  left: auto;
+
+  margin: 0;
+  padding: 0;
+
+  width: 80px;
   .arial-font(12px, 12px);
+
+  background-color: @light-gray;
 }
 
 .example__subtitle {
+  display: block;
+
+  margin: 0;
+  padding: 0;
   margin-bottom: 35px;
+
   .oswald-font-m(14px, 20px);
   text-align: center;
 }
@@ -44,6 +78,95 @@
   .oswald-font-m(16px, 20px);
 }
 
-.example__wrapper {
-  margin-bottom: 35px;
+@media (min-width: @table-width) {
+  .example__container {
+    width: 708px;
+  }
+
+  .example__wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .example__list {
+    margin-bottom: 85px;
+    width: 370px;
+  }
+
+  .example__text {
+    margin-bottom: 55px;
+    width: 675px;
+
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .example__item {
+    width: 160px;
+    height: 70px;
+  }
+
+  .example__index {
+    bottom: -5px;
+    padding: 0 10px;
+    width: auto;
+  }
+
+  .example__subtitle {
+    margin: 0;
+    width: 190px;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: right;
+    text-transform: uppercase;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .example {
+    background-image: linear-gradient(#ffffff 135px, transparent 135px, transparent 100%);
+  }
+
+  .example__container {
+    display: flex;
+    position: relative;
+    width: 1220px;
+  }
+
+  .example__wrapper {
+    display: block;
+  }
+
+  .example__description {
+    width: 460px;
+    margin-right: 150px;
+  }
+
+  .example__slider {
+    width: 610px;
+  }
+
+  .example__list {
+    margin-bottom: 60px;
+  }
+
+  .example__title {
+    margin: 0;
+    margin-bottom: 130px;
+  }
+
+  .example__subtitle {
+    margin-bottom: 70px;
+    width: 365px;
+    text-align: left;
+  }
+
+  .example__subtitle span {
+    margin-left: 65px;
+  }
+
+  .example__text {
+    margin-bottom: 70px;
+    width: 435px;
+  }
 }
