--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -17,6 +17,7 @@
 .page-footer__logo {
   margin: 0 auto;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .page-footer__social {
@@ -46,5 +47,11 @@
 
   .page-footer__copyright {
     margin: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-footer {
+    margin-top: 0;
   }
 }
