--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,6 +15,7 @@
 @import "blocks/programs.less";
 @import "blocks/advantage.less";
 @import "blocks/example.less";
+@import "blocks/slider.less";
 @import "blocks/address.less";
 @import "blocks/social-list.less";
 @import "blocks/copyright";
