--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -114,8 +114,7 @@
     right: 0;
 
     width: 50vw;
-    height: 100vh;
-    max-height: 768px;
+    height: 696px;
 
     background: @bg-product url("../img/index-background-desktop@1x.jpg") no-repeat 50% 50%;
     background-size: cover;
