--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -69,4 +69,12 @@
   .page-main__product-banner {
     margin-bottom: 270px;
   }
+
+  .page-main__additional {
+    width: 1220px;
+  }
+
+  .page-main__catalog {
+    margin-bottom: 80px;
+  }
 }
