--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -53,7 +53,12 @@
   .page-main__title {
     width: 708px;
     margin: 0 auto;
-    margin-bottom: 10px;
+    margin-bottom: 45px;
+  }
+
+  .page-main__form {
+    margin: 0 auto;
+    width: 635px;
   }
 }
 
@@ -76,5 +81,9 @@
 
   .page-main__catalog {
     margin-bottom: 80px;
+  }
+
+  .page-main__form {
+    width: 1220px;
   }
 }
